tests/good/test250.tig
let
  type iarr = array of int
  var N := 1000
  var a := iarr[N] of 42
  var i := 0
in
  while i < N do
   ( a[i] := 0;
     i := i + 2
   )
end