tests/bad/bad57.tig
let
  var idx := 0
  var tmp := 0
  type iarr = array of int
  var arr := iarr[10] of 42
in
  tmp:=((idx:=idx+5; idx) < (idx:=idx+5; idx));
  arr[idx] := 32
end
